--- a/portfolio/portfolio1.html
+++ b/portfolio/portfolio1.html
@@ -144,11 +144,29 @@
 
         // Profile Image
         const profilePic = document.querySelector('.profile-pic');
-        if (profilePic && profilePic.src.startsWith('data:')) {
-          const res = await fetch(profilePic.src);
-          const blob = await res.blob();
+        // Ensure the profile image exists and has been set
+        if (profilePic && profilePic.src && profilePic.src.startsWith('data:')) {
+          // The image source is a base64 data URL, so we can directly use it without fetching it
+          const dataURL = profilePic.src;
+  
+          // Convert the base64 string to a blob
+          const byteCharacters = atob(dataURL.split(',')[1]);  // Extract base64 part of the string
+          const byteArrays = [];
+
+          for (let offset = 0; offset < byteCharacters.length; offset += 1024) {
+            const byteArray = new Uint8Array(1024);
+            for (let i = 0; i < 1024 && offset + i < byteCharacters.length; i++) {
+              byteArray[i] = byteCharacters.charCodeAt(offset + i);
+            }
+            byteArrays.push(byteArray);
+          }
+
+          const blob = new Blob(byteArrays, { type: 'image/jpeg' });
+
+          // Add the profile image to the zip file
           zip.file("profile.jpg", blob);
         }
+
 
         // Generate ZIP
         const content = await zip.generateAsync({ type: "blob" });
