--- a/portfolio/portfolio1.html
+++ b/portfolio/portfolio1.html
@@ -119,7 +119,7 @@
         zip.file("portfolio1.html", document.documentElement.outerHTML);
 
         // HTML pages
-        const pages = ["portfolio/education1.html","portfolio/projects1.html","portfolio/certificates1.html","portfolio/experience1.html"];
+        const pages = ["portfolio/others/education1.html","portfolio/others/projects1.html","portfolio/others/certificates1.html","portfolio/others/experience1.html","portfolio/others/contactme1.html"];
 
         for (const page of pages) {
           const res = await fetch(page);
