--- a/portfolio/portfolio1.html
+++ b/portfolio/portfolio1.html
@@ -116,10 +116,16 @@
 
       try {
         // Include the main index file
-        zip.file("portfolio1.html", document.documentElement.outerHTML);
+        // Get current HTML and replace base64 image with "profile.jpg"
+        let htmlContent = document.documentElement.outerHTML;
+        htmlContent = htmlContent.replace(/<img[^>]+class="profile-pic"[^>]+src="[^"]+"/, match => {
+          return match.replace(/src="[^"]+"/, 'src="profile.jpg"');
+        });
+        zip.file("portfolio1.html", htmlContent);
+
 
         // HTML pages
-        const pages = ["./portfolio1.html","./others/education1.html","./others/projects1.html","./others/certificates1.html","./others/experience1.html","./others/contactme1.html"];
+        const pages = ["portfolio1.html","others/education1.html","others/projects1.html","others/certificates1.html","others/experience1.html","others/contactme1.html"];
 
         for (const page of pages) {
           const res = await fetch(page);
@@ -129,7 +135,7 @@
         }
 
         // CSS files
-        const cssFiles = ["./portfolio1.css","./styleportfolio1.css","./stylesub1.css"];
+        const cssFiles = ["portfolio1.css","styleportfolio1.css","stylesub1.css"];
 
         for (const cssFile of cssFiles) {
           const res = await fetch(cssFile);
